# src/main/kotlin/auth/api/model/SessionDTO.kt
@@ -1,6 +1,8 @@
 package de.okan.drink_and_snack_api.auth.api.model
 
+import kotlinx.serialization.Serializable
+
+@Serializable
 data class SessionDTO(
-    val token: String,
-    val refreshToken: String,
+    val accessToken: String,
 )
